--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -14,6 +14,7 @@
     "@uiw/react-codemirror": "^4.21.21",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "lodash": "^4.17.21",
     "randomuuid": "^1.0.1",
     "react": "^18.2.0",
     "react-avatar": "^5.0.3",
